kubernetes/projects/apps/opencloud/collabora/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: opencloud
spec:
  selector:
    app: collabora
  ports:
  - name: http
    port: 80
    targetPort: http
